bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q8 (Execution Plan, String).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&string"
---
ProjectionExec: expr=[ENC_PT(title@0) as title, ENC_PT(text@1) as text, ENC_PT(reviewDate@2) as reviewDate, ENC_PT(reviewer@3) as reviewer, ENC_PT(reviewerName@4) as reviewerName, ENC_PT(rating1@5) as rating1, ENC_PT(rating2@6) as rating2, ENC_PT(rating3@7) as rating3, ENC_PT(rating4@8) as rating4]
  SortExec: TopK(fetch=20), expr=[AS_SORTABLE_BYTES(ENC_TF(ENC_PT(reviewDate@2))) DESC], preserve_partitioning=[false]
    HashJoinExec: mode=CollectLeft, join_type=Left, on=[(review@0, review@0)], projection=[title@1, text@2, reviewDate@3, reviewer@4, reviewerName@5, rating1@6, rating2@7, rating3@8, rating4@10]
      HashJoinExec: mode=CollectLeft, join_type=Left, on=[(review@0, review@0)], projection=[review@0, title@1, text@2, reviewDate@3, reviewer@4, reviewerName@5, rating1@6, rating2@7, rating3@9]
        HashJoinExec: mode=CollectLeft, join_type=Left, on=[(review@0, review@0)], projection=[review@0, title@1, text@2, reviewDate@3, reviewer@4, reviewerName@5, rating1@6, rating2@8]
          HashJoinExec: mode=CollectLeft, join_type=Left, on=[(review@0, review@0)], projection=[review@0, title@1, text@2, reviewDate@3, reviewer@4, reviewerName@5, rating1@7]
            ProjectionExec: expr=[review@2 as review, title@4 as title, text@3 as text, reviewDate@5 as reviewDate, reviewer@0 as reviewer, reviewerName@1 as reviewerName]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@2, review@0)], projection=[reviewer@0, reviewerName@1, review@2, text@3, title@4, reviewDate@6]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@2, review@0)], projection=[reviewer@0, reviewerName@1, review@2, text@3, title@5]
                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@2, review@0)], projection=[reviewer@0, reviewerName@1, review@2, text@4]
                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@2, review@0)], projection=[reviewer@0, reviewerName@1, review@2]
                      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(reviewer@0, reviewer@1)], projection=[reviewer@0, reviewerName@1, review@2]
                        ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?reviewer <http://xmlns.com/foaf/0.1/name> ?reviewerName], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GPOS/delta-parquet-file.zstd.parquet:0..11588394]]}, projection=[subject@1 as reviewer, object@3 as reviewerName], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://xmlns.com/foaf/0.1/name>, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://xmlns.com/foaf/0.1/name> AND <http://xmlns.com/foaf/0.1/name> <= predicate_max@2, required_guarantees=[predicate in (<http://xmlns.com/foaf/0.1/name>)]
                        ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://purl.org/stuff/rev#reviewer> ?reviewer], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GPOS/delta-parquet-file.zstd.parquet:0..11588394]]}, projection=[subject@1 as review, object@3 as reviewer], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://purl.org/stuff/rev#reviewer> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://purl.org/stuff/rev#reviewer> AND <http://purl.org/stuff/rev#reviewer> <= predicate_max@2, required_guarantees=[predicate in (<http://purl.org/stuff/rev#reviewer>)]
                      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer12/Product578>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GPOS/delta-parquet-file.zstd.parquet:0..11588394]]}, projection=[subject@1 as review], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> AND object@3 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer12/Product578> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer12/Product578> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer12/Product578> <= object_max@6, required_guarantees=[object in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer12/Product578>), predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor>)]
                    FilterExec: EBV(LANGMATCHES(ENC_TF(LANG(ENC_PT(text@1))), 2:{value:EN,language:}))
                      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://purl.org/stuff/rev#text> ?text], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GPOS/delta-parquet-file.zstd.parquet:0..11588394]]}, projection=[subject@1 as review, object@3 as text], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://purl.org/stuff/rev#text> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://purl.org/stuff/rev#text> AND <http://purl.org/stuff/rev#text> <= predicate_max@2, required_guarantees=[predicate in (<http://purl.org/stuff/rev#text>)]
                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://purl.org/dc/elements/1.1/title> ?title], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GPOS/delta-parquet-file.zstd.parquet:0..11588394]]}, projection=[subject@1 as review, object@3 as title], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://purl.org/dc/elements/1.1/title> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://purl.org/dc/elements/1.1/title> AND <http://purl.org/dc/elements/1.1/title> <= predicate_max@2, required_guarantees=[predicate in (<http://purl.org/dc/elements/1.1/title>)]
                ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewDate> ?reviewDate], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GPOS/delta-parquet-file.zstd.parquet:0..11588394]]}, projection=[subject@1 as review, object@3 as reviewDate], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewDate> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewDate> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewDate> <= predicate_max@2, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewDate>)]
            ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating1> ?rating1], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GPOS/delta-parquet-file.zstd.parquet:0..11588394]]}, projection=[subject@1 as review, object@3 as rating1], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating1>, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating1> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating1> <= predicate_max@2, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating1>)]
          ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating2> ?rating2], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GPOS/delta-parquet-file.zstd.parquet:0..11588394]]}, projection=[subject@1 as review, object@3 as rating2], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating2>, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating2> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating2> <= predicate_max@2, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating2>)]
        ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating3> ?rating3], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GPOS/delta-parquet-file.zstd.parquet:0..11588394]]}, projection=[subject@1 as review, object@3 as rating3], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating3>, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating3> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating3> <= predicate_max@2, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating3>)]
      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating4> ?rating4], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GPOS/delta-parquet-file.zstd.parquet:0..11588394]]}, projection=[subject@1 as review, object@3 as rating4], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating4>, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating4> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating4> <= predicate_max@2, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating4>)]
